# fasthtml_fungi_2

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  sample-dotenv
.github/workflows/: python-app.yml
data/: observation2.db  observation2.db-shm  observation2.db-wal  observations.db
src/fasthtml_fungi_2/: __init__.py  __main__.py  gps_utils.py  utils.py
static/: style.css
