[project]
name = "fasthtml-fungi-2"
version = "0.2"
description = "My Mushroom Map - a web app for mushroom hunters; stores photos and GPS locations of mushrooms and visualizes them on a map."
authors = [
    { name = "Daniel N. Lang", email = "github@tfc.ai" }
]
dependencies = [
    "python-fasthtml>=0.3.3",
    "icecream>=2.1.3",
    "piexif>=1.1.3",
]
readme = "README.md"
requires-python = ">= 3.11"
license = {file = "LICENSE"}
keywords = ["mushroom", "mycology", "fungi", "map", "geo", "web app", "fasthtml", "rye"]

[project.urls]
Homepage = "https://github.com/velaia/fasthtml_fungi_2"
Repository = "https://github.com/velaia/fasthtml_fungi_2"
Issues = "https://github.com/velaia/fasthtml_fungi_2/issues"
# Documentation = "https://readthedocs.org"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
"fasthtml-fungi-2" = "fasthtml_fungi_2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fasthtml_fungi_2"]
